# atoma-proxy

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.example.toml  deny.toml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.test.yaml  docker-compose.yaml  loki.yaml  open_router.example.json  otel-collector-config.yaml  prometheus.test.yml  prometheus.yml  taplo.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  deny.yml  release.yml
atoma-auth/: Cargo.toml
atoma-auth/src/: auth.rs  config.rs  google.rs  lib.rs
atoma-auth/src/sui/: mod.rs
atoma-proxy/: Cargo.toml
atoma-proxy-service/: Cargo.toml
atoma-proxy-service/docs/: openapi.yml
atoma-proxy-service/src/: config.rs  lib.rs  proxy_service.rs
atoma-proxy-service/src/components/: grafana.rs  mod.rs  openapi.rs
atoma-proxy-service/src/handlers/: auth.rs  mod.rs  nodes.rs  settings.rs  stacks.rs  stats.rs  subscriptions.rs  tasks.rs
atoma-proxy/docs/: openapi.yml
atoma-proxy/src/: main.rs  telemetry.rs
atoma-proxy/src/server/: chat_completions.rs  config.rs  error.rs  http_server.rs  middleware.rs  mod.rs  streamer.rs  types.rs
atoma-proxy/src/server/components/: openapi.rs
atoma-proxy/src/server/handlers/: chat_completions.rs  completions.rs  embeddings.rs  image_generations.rs  metrics.rs  mod.rs  models.rs  nodes.rs  request_model.rs  select_node_public_key.rs
atoma-state/: Cargo.toml  build.rs
atoma-state/src/: config.rs  config_error.rs  errors.rs  handlers.rs  lib.rs  metrics.rs  network.rs  state_manager.rs  tests.rs  timer.rs  types.rs
atoma-state/src/migrations/: 20241213104339_create_initial_schema.sql  20241219152013_key_rotations.sql  20241230131705_add_balance_table.sql  20250108091311_remove_wallet_constrain.sql  20250108092319_add-usdc-digest-table.sql  20250109151445_fix-usdc-balance-check.sql  20250110101531_check-compute-units-constraint.sql  20250116130956_salt.sql  20250120112821_add_timestamp_to_nodes.sql  20250124145133_timestamp.sql  20250205174956_add-timestamp-to-nodes-table.sql  20250210104118_node-metrics.sql  20250211181607_add-performance-metrics-table.sql  20250223231316_remove-node-metrics-postgres.sql  20250304082533_api_token_name.sql  20250304134031_fix-timestamps.sql  20250305142648_username-name.sql  20250311143035_update-key-rotations-table.sql  20250317104814_api_token_last_used_timestamp.sql  20250318080012_add-password-salt.sql  20250324140155_update-stack-table.sql  20250327153220_lock-almost-full-stacks.sql  20250329074929_remove-throughput-tables.sql  20250403075604_locked_compute_units-stacks.sql  20250411093351_remove-unused-tables.sql  20250411093352_add-tx-digest-to-stacks.sql  20250424111320_fiat_payments.sql  20250514163514_remove_stats_tables.sql  20250515143255_split-computed-units.sql  20250528070551_usage-per-day.sql  20250702112705_price_per_user_per_model.sql  20250722090829_node-attestations.sql  20250728113130_rename-column.sql
helm/atoma-proxy/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/atoma-proxy/scripts/: deploy.sh  fix-addons.sh  fix-rbac.sh  setup-cluster.sh
helm/atoma-proxy/templates/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  secrets.yaml  service.yaml  sui-config-configmap.yaml
helm/infrastructure/: metallb-config.yaml  metallb-install.yaml
traefik/: entrypoint.sh
traefik/config/: middlewares.yml  traefik.yml
