[workspace]
resolver = "2"
members = ["atoma-auth", "atoma-proxy-service", "atoma-proxy", "atoma-state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.91"
async-trait = "0.1.86"
atoma-auth = { path = "./atoma-auth" }
atoma-proxy-service = { path = "./atoma-proxy-service" }
atoma-state = { path = "./atoma-state" }
atoma-p2p = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-p2p", branch = "ja-node-metrics" }
atoma-sui = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-sui", branch = "main" }
atoma-utils = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-utils", branch = "main" }
axum = "0.7.7"
base64 = "0.22.1"
bcs = "0.1.6"
blake2 = "0.10.6"
chrono = "0.4.38"
clap = "4.5.20"
config = "0.14.1"
dcap-qvl = "0.1.6"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev="69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev="69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
flume = "0.11.1"
futures = "0.3.31"
hex = "0.4.3"
hf-hub = "0.3.2"
isocountry = "0.3.2"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
pem = "3.0.4"
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = "0.27.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.9"
rsa = "0.9.7"
serde = "1.0.214"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
serial_test = "3.1.1"
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto", tag = "testnet-v1.42.1" }
sqlx = { version = "0.8.2", features = ["postgres","runtime-tokio-native-tls"] }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", tag = "testnet-v1.42.1" }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", tag = "testnet-v1.42.1" }
sui-sdk-types = "0.0.2"
thiserror = "2.0.11"
tokenizers = "0.21.0"
tokio = "1.41.0"
toml = "0.8.19"
tonic = "0.12"
tower = "0.5.1"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.18"
url = "2.5.4"
utoipa = "5.2.0"
utoipa-swagger-ui = "8.0.3"
uuid = "1.11.0"
x25519-dalek = "2.0.1"
zeroize = "1.8.1"
