[package]
edition.workspace = true
license.workspace = true
name              = "atoma-state"
version.workspace = true

[dependencies]
atoma-p2p          = { workspace = true }
atoma-sui          = { workspace = true }
atoma-utils        = { workspace = true }
blake3             = { workspace = true }
chrono.workspace   = true
config             = { workspace = true }
fastrand           = { workspace = true }
flume              = { workspace = true }
futures            = { workspace = true }
hex                = { workspace = true }
isocountry         = { workspace = true }
mockito            = { workspace = true }
once_cell          = { workspace = true }
opentelemetry      = { workspace = true }
prometheus         = { workspace = true }
remote-attestation = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true, features = [ "derive" ] }
serde_json         = { workspace = true }
sqlx               = { workspace = true, features = [ "chrono", "runtime-tokio-native-tls", "sqlite" ] }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = [ "full" ] }
tracing            = { workspace = true }
url                = { workspace = true }
utoipa             = { workspace = true }

[dev-dependencies]
futures     = { workspace = true }
proptest    = { workspace = true }
serial_test = { workspace = true }
uuid        = { workspace = true }
